# _TripartiteDataSTORE

./: .gitignore  DEVELOPMENT_COMPLETE.txt  README.txt  _killTheUVICORN.py  github_actions_release.yml  pyproject.toml  requirements.txt  run-ingestor.bat  run-viewer.bat  run.bat  setup_env.bat  setup_env.sh  tripartite.spec
.claude/: onboarding-prompt.md  settings.local.json
_devTools/: _TextNORMALIZER.py  build_release.py  nomalize_text_to_utf-8.py  reorganize.py  test_treesitter.py
_docs_and_guides/: BUILD_RELEASE_GUIDE.md  CHANGES_v020.md  COMPLETE_SYSTEM.md  DEVJOURNAL.md  DEVJOURNAL_01.md  EXPORT_GUIDE.md  INTEGRATION_GUIDE_v8.0.md  QUICKSTART.md  README_01_INGESTION.md  VIEWER_GUIDE.md
_uimapper_reports/: uimap_report.json  uimap_report.md
curate_tools/: __init__.py  stats_report.py
repaired-files-from-src-and-subfolders/: app.py  chunk_viewer.py  cli.py  diff_engine.py  export.py  file_splitter.py  gui_constants.py  settings_store.py  utils.py
repaired-files-from-src-and-subfolders/chunkers/: code.py  compound.py  prose.py
repaired-files-from-src-and-subfolders/curate_tools/: __init__.py
repaired-files-from-src-and-subfolders/db/: query.py  search.py
sample_db/: _MicroserviceLIBRARY.json
src/: __init__.py  data_store.py  export_cli.py  test_treesitter.py  tokenizing_patcher.py  viewer.py
src/chunkers/: __init__.py  (+1 more)
tests/: test_pipeline.py
tripartite/: config.py  datastore.py  explorer.py  export_cli.py  gui.py  hitl.py  settings_dialog.py  settings_store.py  studio - Copy.py  studio.py  test_treesitter.py  tokenizing_patcher.py  viewer.py
(+39 files in other folders)
